--- a/SAAC_iOS/Base.lproj/Main.storyboard
+++ b/SAAC_iOS/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iBh-Xw-Qzo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iBh-Xw-Qzo">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--Profile-->
@@ -167,6 +167,24 @@
             </objects>
             <point key="canvasLocation" x="-983" y="809"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="ONw-My-rLH">
+            <objects>
+                <viewController id="5G7-KO-C3S" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="a2R-kw-ebi"/>
+                        <viewControllerLayoutGuide type="bottom" id="VGP-vl-VIV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pm2-hS-F0G">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GWA-YM-TDp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1085" y="-880"/>
+        </scene>
         <!--Instagram View-->
         <scene sceneID="dQk-8T-XKy">
             <objects>
@@ -244,6 +262,7 @@
                                     <outlet property="TimeStamp" destination="5Ai-Ph-gFB" id="WqA-Aj-FMl"/>
                                     <outlet property="UserImage" destination="kWP-WP-UAu" id="6ty-Y9-a0W"/>
                                     <outlet property="UserName" destination="Tmz-Jf-UuM" id="uCf-Ow-WOI"/>
+                                    <segue destination="5G7-KO-C3S" kind="show" id="scS-rE-30n"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
