--- a/SAAC_iOS/Base.lproj/Main.storyboard
+++ b/SAAC_iOS/Base.lproj/Main.storyboard
@@ -37,22 +37,16 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="q3l-oV-In0">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="q3l-oV-In0">
                                 <rect key="frame" x="87" y="353" width="426" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edt-N9-qi7">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edt-N9-qi7">
                                 <rect key="frame" x="465" y="460" width="48" height="30"/>
                                 <state key="normal" title="Logout"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Points" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3L-ST-B3K">
-                                <rect key="frame" x="174" y="15" width="48" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZg-HE-NuR">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZg-HE-NuR">
                                 <rect key="frame" x="74" y="460" width="123" height="30"/>
                                 <state key="normal" title="Change Password"/>
                             </button>
@@ -62,22 +56,31 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Points" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3L-ST-B3K">
+                                <rect key="frame" x="174" y="15" width="47.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="pZg-HE-NuR" firstAttribute="top" secondItem="q3l-oV-In0" secondAttribute="bottom" constant="77" id="23u-9w-6IC"/>
                             <constraint firstItem="edt-N9-qi7" firstAttribute="trailing" secondItem="cyO-GK-rND" secondAttribute="trailing" id="44l-MX-iBe"/>
                             <constraint firstItem="4Pq-bH-UgW" firstAttribute="top" secondItem="wlZ-It-zBh" secondAttribute="bottom" constant="28" id="4tg-bv-bcX"/>
+                            <constraint firstItem="Enu-gM-AQe" firstAttribute="top" secondItem="pZg-HE-NuR" secondAttribute="bottom" constant="61" id="7Ld-v4-ba2"/>
                             <constraint firstItem="cyO-GK-rND" firstAttribute="centerX" secondItem="IdT-C7-ShY" secondAttribute="centerX" id="9rb-Vg-op2"/>
                             <constraint firstItem="o3L-ST-B3K" firstAttribute="leading" secondItem="7qS-pc-hId" secondAttribute="trailing" constant="8" symbolic="YES" id="AR8-TJ-aQd"/>
-                            <constraint firstItem="7qS-pc-hId" firstAttribute="baseline" secondItem="o3L-ST-B3K" secondAttribute="baseline" id="FGw-PO-Xoy"/>
+                            <constraint firstItem="pZg-HE-NuR" firstAttribute="leading" secondItem="IdT-C7-ShY" secondAttribute="leadingMargin" constant="54" id="E3g-mp-zEg"/>
                             <constraint firstItem="4Pq-bH-UgW" firstAttribute="trailing" secondItem="wlZ-It-zBh" secondAttribute="trailing" id="FjM-1f-YIk"/>
+                            <constraint firstItem="o3L-ST-B3K" firstAttribute="centerY" secondItem="7qS-pc-hId" secondAttribute="centerY" id="KiK-UA-Rff"/>
                             <constraint firstItem="4Pq-bH-UgW" firstAttribute="trailing" secondItem="edt-N9-qi7" secondAttribute="trailing" id="QrZ-MZ-tKR"/>
-                            <constraint firstItem="7qS-pc-hId" firstAttribute="centerY" secondItem="o3L-ST-B3K" secondAttribute="centerY" id="Qsp-wB-m2s"/>
                             <constraint firstItem="7qS-pc-hId" firstAttribute="leading" secondItem="wlZ-It-zBh" secondAttribute="leading" id="QuJ-ZF-lnJ"/>
                             <constraint firstItem="7qS-pc-hId" firstAttribute="leading" secondItem="q3l-oV-In0" secondAttribute="leading" id="Ras-Tg-pLw"/>
                             <constraint firstItem="4Pq-bH-UgW" firstAttribute="trailing" secondItem="q3l-oV-In0" secondAttribute="trailing" id="Tgf-6q-ieX"/>
                             <constraint firstItem="7qS-pc-hId" firstAttribute="leading" secondItem="4Pq-bH-UgW" secondAttribute="leading" id="ThX-A8-ESj"/>
                             <constraint firstItem="cyO-GK-rND" firstAttribute="top" secondItem="L6d-ED-bZ2" secondAttribute="bottom" constant="24" id="UhA-6a-JaT"/>
+                            <constraint firstItem="edt-N9-qi7" firstAttribute="centerY" secondItem="pZg-HE-NuR" secondAttribute="centerY" id="cFb-CB-dUw"/>
                             <constraint firstItem="cyO-GK-rND" firstAttribute="top" secondItem="7qS-pc-hId" secondAttribute="bottom" constant="9" id="cj3-uh-C3a"/>
                             <constraint firstItem="7qS-pc-hId" firstAttribute="top" secondItem="IdT-C7-ShY" secondAttribute="topMargin" constant="15" id="hWM-vr-zF2"/>
                         </constraints>
@@ -99,18 +102,51 @@
         <scene sceneID="s1C-oL-dr4">
             <objects>
                 <tableViewController id="0o2-xg-rX1" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="7XW-st-wsx">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="58" sectionHeaderHeight="28" sectionFooterHeight="28" id="7XW-st-wsx">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="SXc-AL-Hcg">
-                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="58" id="SXc-AL-Hcg" customClass="LeaderboardTableViewCell" customModule="SAAC_iOS" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="600" height="58"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SXc-AL-Hcg" id="wZx-T0-KaF">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="57.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Points" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Af-fN-LPR">
+                                            <rect key="frame" x="35" y="8" width="79" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tqs-LT-R7F">
+                                            <rect key="frame" x="8" y="8" width="11" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ReE-ZV-wHb">
+                                            <rect key="frame" x="173" y="3" width="71" height="30"/>
+                                            <state key="normal" title="Username"/>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="0Af-fN-LPR" firstAttribute="leading" secondItem="wZx-T0-KaF" secondAttribute="leadingMargin" constant="5" id="8hk-iK-FXP"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="0Af-fN-LPR" secondAttribute="trailing" constant="510" id="oC0-a5-AtF"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="8hk-iK-FXP"/>
+                                            <exclude reference="oC0-a5-AtF"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="PointsLabel" destination="0Af-fN-LPR" id="75v-EW-To2"/>
+                                    <outlet property="RankLabel" destination="Tqs-LT-R7F" id="yNA-kD-PMW"/>
+                                    <outlet property="UsernameButton" destination="ReE-ZV-wHb" id="UiJ-eB-TfI"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -172,24 +208,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9hO-8C-0Qm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-983" y="809"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="ONw-My-rLH">
-            <objects>
-                <viewController id="5G7-KO-C3S" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="a2R-kw-ebi"/>
-                        <viewControllerLayoutGuide type="bottom" id="VGP-vl-VIV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="pm2-hS-F0G">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GWA-YM-TDp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1085" y="-880"/>
         </scene>
         <!--Instagram View-->
         <scene sceneID="dQk-8T-XKy">
