added basic image controller

--- a/SAAC_iOS/Base.lproj/Main.storyboard
+++ b/SAAC_iOS/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iBh-Xw-Qzo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iBh-Xw-Qzo">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -204,6 +204,7 @@
                     <connections>
                         <segue destination="l3k-gj-4Vx" kind="relationship" relationship="viewControllers" id="1Mu-Jn-MUq"/>
                         <segue destination="0o2-xg-rX1" kind="relationship" relationship="viewControllers" id="0wp-Wl-8ec"/>
+                        <segue destination="85N-Ps-725" kind="relationship" relationship="viewControllers" id="ksN-Oq-qhY"/>
                         <segue destination="lj8-Xy-YIR" kind="relationship" relationship="viewControllers" id="Nrx-gO-qcl"/>
                         <segue destination="bYX-3B-mor" kind="relationship" relationship="viewControllers" id="2X2-Gb-DhV"/>
                     </connections>
@@ -211,6 +212,55 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9hO-8C-0Qm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-983" y="809"/>
+        </scene>
+        <!--Camera-->
+        <scene sceneID="qQF-EN-tVj">
+            <objects>
+                <viewController id="85N-Ps-725" userLabel="Camera" customClass="ImageViewController" customModule="SAAC_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gUK-VS-en4"/>
+                        <viewControllerLayoutGuide type="bottom" id="akc-Qc-qFn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xRD-zR-qgB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="guh-qp-fU4">
+                                <rect key="frame" x="55" y="65" width="264" height="290"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hxu-zY-fh3">
+                                <rect key="frame" x="55" y="415" width="77" height="30"/>
+                                <state key="normal" title="Take Photo"/>
+                                <connections>
+                                    <action selector="Camera:" destination="85N-Ps-725" eventType="touchUpInside" id="WkI-zX-ysU"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NXX-bW-jZd">
+                                <rect key="frame" x="230" y="415" width="89" height="30"/>
+                                <state key="normal" title="Open Library"/>
+                                <connections>
+                                    <action selector="OpenLibrary:" destination="85N-Ps-725" eventType="touchUpInside" id="paY-ui-Sjr"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bk8-MK-w3C">
+                                <rect key="frame" x="164" y="496" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="SaveImage:" destination="85N-Ps-725" eventType="touchUpInside" id="kum-rW-jFp"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="xbi-3w-8o9"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="Image" destination="guh-qp-fU4" id="K7a-UM-Xwc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BQ6-pd-jIW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-969" y="1706"/>
         </scene>
         <!--Instagram View-->
         <scene sceneID="dQk-8T-XKy">
